# warden

./: .gitattributes  .gitignore  .mcp.json  .scaffold-upstream.conf  CLAUDE.md  Cargo.toml  FIRST-RELEASE-PROMPT.md  Justfile  README.md  recipes.json  vendor.toml
.claude/: architecture-rules.example.json  grimoire-config.json  grimoire-files.json  model-effort-profiles.json  recipes.json  settings.json
.claude/hooks/: _hook_common.py  autonomy-allow.sh  bundled-sync-guard.sh  design-doc-guard.sh  onboarding-bootstrap-guard.sh  post-commit  pre-commit  protected-branch-guard.sh  push-guard.sh  release-plan-guard.sh  stealth-guard.sh  worktree-brief.sh  worktree-guard.sh
.claude/mcp-servers/: README.md
.claude/paradigms/: README.md
.claude/quick-start-templates/cli/files/: .gitignore  Cargo.toml  README.md  justfile
.claude/quick-start-templates/cli/files/.claude/: architecture-rules.json  recipes.json
.claude/quick-start-templates/cli/files/scripts/: package-manifest.sh
.claude/quick-start-templates/cli/files/src/: build_info.rs  config.rs  main.rs
.claude/quick-start-templates/cli/files/tests/: cli_integration.rs
.claude/quick-start-templates/gui/files/: Cargo.toml  README.md  justfile
.claude/quick-start-templates/gui/files/.claude/: architecture-rules.json  recipes.json
.claude/quick-start-templates/gui/files/scripts/: package-manifest.sh  package.sh  stop.sh
.claude/quick-start-templates/gui/files/src/: build_info.rs  config.rs  main.rs
.claude/quick-start-templates/gui/files/tests/: gui_smoke_integration.rs
.claude/quick-start-templates/gui/files/tests/gui-baselines/: main.snapshot
.claude/quick-start-templates/lib/files/: Cargo.toml  README.md  component.json  justfile  publish.toml
.claude/quick-start-templates/lib/files/.claude/: architecture-rules.json  recipes.json
.claude/quick-start-templates/lib/files/scripts/: release.sh
.claude/quick-start-templates/lib/files/src/: lib.rs  version_compare.rs
.claude/quick-start-templates/lib/files/tests/: version_compare_integration.rs
.claude/quick-start-templates/service/files/: .gitignore  Cargo.toml  README.md  compose.yaml  justfile
.claude/quick-start-templates/service/files/.claude/: architecture-rules.json  recipes.json
.claude/quick-start-templates/service/files/scripts/: package-manifest.sh
.claude/quick-start-templates/service/files/src/: build_info.rs  config.rs  http.rs  logging_init.rs  main.rs
.claude/quick-start-templates/service/files/tests/: service_integration.rs
.claude/stealth/: CLAUDE-stealth-off.md  CLAUDE-stealth-on.md  README.md
.claude/workflows/: release-planning.js  source-to-design-docs.js  write-capable-example.js
docs/: README.md  architecture-guidelines.md  changelog.md  coding-standards.md  documentation.html  features.md  integration-workflow.md  project-structure.md  quickstart.md  release-planning-v0.1.md  release-planning-v0.2.md  release-planning-v0.3.md  release-planning-v0.4.md  release-planning-v0.5.md  release-planning-v0.6.md  release-planning-v0.7.md  release-planning-v0.8.md  release-planning-v0.9.md  release-planning-v1.0.1.md  release-planning-v1.0.md  release-planning-v1.1.md  release-planning-v1.2.md  release-planning-v1.3.md  roadmap.md  version-design.md  version-history.md
docs/coding-standards/: README.md  css.md  html.md  javascript.md  python.md  rust.md  tooling.md
docs/design/: README.md  app-design.md  copilot-grm-namespacing-design.md  fixtures-convention-design.md  justfile-standard-design.md
scripts/: build_dist.py  release-manifest.sh  release.sh
src/: app.rs  changelog.rs  config.rs  detector.rs  dump_ui.rs  fleet_status.rs  history.rs  launchd.rs  launcher.rs  log_capture.rs  main.rs  models.rs  notifier.rs  perf.rs  scanner.rs  version_checker.rs
(+427 files in other folders)
