[package]
name = "warden"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "warden"
path = "src/main.rs"

[dependencies]
obsidian = { git = "https://github.com/rhohn94/obsidian.git", tag = "v0.44.0" }
eframe = "0.31"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
