[package]
name = "warden"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "warden"
path = "src/main.rs"

[dependencies]
obsidian = { git = "https://github.com/rhohn94/obsidian.git", tag = "v0.44.0" }
egui = "0.31"
wgpu = "24"
winit = "0.30"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
pollster = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
open = "5"

[dev-dependencies]
tempfile = "3"
